--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc -p ./",
-    "lint": "tslint -c tslint.json src/*.ts src/**/*.ts --project ./tsconfig.json",
+    "lint": "tslint -c tslint.json src/*.ts src/**/*.ts --project ./tsconfig.json"
   },
   "keywords": [
     "quantum"
