--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@qramana/qramana-common-types",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Common Type definitions for @qramana/qramana",
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc -p ./",
-    "lint": "tslint -c tslint.json src/*.ts src/**/*.ts --project ./tsconfig.json"
+    "lint": "tslint -c tslint.json src/*.ts src/**/*.ts --project ./tsconfig.json",
+    "prepublish": "npm run build"
   },
   "keywords": [
     "quantum"
