replace real/imag to re/im

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "license": "MIT",
   "devDependencies": {
     "tslint": "^5.4.3",
-    "typescript": "^3.0.0"
+    "typescript": "~3.7.0"
   },
   "files": [
     "lib"
